--- a/lagou-cloud-dev.yml
+++ b/lagou-cloud-dev.yml
@@ -2,4 +2,8 @@ mysql:
   url: jdbc:mysql://localhost:3306/lagou?serverTimezone=Asia/Shanghai
   username: root
   password: root
+client:
+  X: 1
+  Y: 2  
+  
   
